@@ -1,3 +1,10 @@
+2004-08-09  Mikael Hallendal  <micke@imendio.com>
+
+	* examples/test-tunnel.c: Updated.
+	* loudmouth/lm-connection.[ch]:
+	(lm_connection_get_jid), (lm_connection_set_jid): 
+	- Replaced the _host functions with these. These makes much more sense.
+
 2004-08-08  Mikael Hallendal  <micke@imendio.com>
 
 	* configure.in: Bumped version to 0.17
